--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,374 @@ src/test/data/sandbox/
 docs/_site/
 
 bin/*
+/htmlReport/img/arrowDown.gif
+/htmlReport/img/arrowUp.gif
+/htmlReport/css/coverage.css
+/htmlReport/js/highlight.min.js
+/htmlReport/js/highlightjs-line-numbers.min.js
+/htmlReport/css/idea.min.css
+/htmlReport/ns-1/index.html
+/htmlReport/ns-2/index.html
+/htmlReport/ns-3/index.html
+/htmlReport/ns-4/index.html
+/htmlReport/ns-5/index.html
+/htmlReport/ns-6/index.html
+/htmlReport/ns-7/index.html
+/htmlReport/ns-8/index.html
+/htmlReport/ns-9/index.html
+/htmlReport/ns-10/index.html
+/htmlReport/ns-11/index.html
+/htmlReport/ns-12/index.html
+/htmlReport/ns-13/index.html
+/htmlReport/ns-14/index.html
+/htmlReport/ns-15/index.html
+/htmlReport/ns-16/index.html
+/htmlReport/ns-17/index.html
+/htmlReport/ns-18/index.html
+/htmlReport/ns-a/index.html
+/htmlReport/ns-b/index.html
+/htmlReport/ns-c/index.html
+/htmlReport/ns-d/index.html
+/htmlReport/ns-e/index.html
+/htmlReport/ns-f/index.html
+/htmlReport/index.html
+/htmlReport/ns-1/index_SORT_BY_BLOCK.html
+/htmlReport/ns-2/index_SORT_BY_BLOCK.html
+/htmlReport/ns-3/index_SORT_BY_BLOCK.html
+/htmlReport/ns-4/index_SORT_BY_BLOCK.html
+/htmlReport/ns-5/index_SORT_BY_BLOCK.html
+/htmlReport/ns-6/index_SORT_BY_BLOCK.html
+/htmlReport/ns-7/index_SORT_BY_BLOCK.html
+/htmlReport/ns-8/index_SORT_BY_BLOCK.html
+/htmlReport/ns-9/index_SORT_BY_BLOCK.html
+/htmlReport/ns-10/index_SORT_BY_BLOCK.html
+/htmlReport/ns-11/index_SORT_BY_BLOCK.html
+/htmlReport/ns-12/index_SORT_BY_BLOCK.html
+/htmlReport/ns-13/index_SORT_BY_BLOCK.html
+/htmlReport/ns-14/index_SORT_BY_BLOCK.html
+/htmlReport/ns-15/index_SORT_BY_BLOCK.html
+/htmlReport/ns-16/index_SORT_BY_BLOCK.html
+/htmlReport/ns-17/index_SORT_BY_BLOCK.html
+/htmlReport/ns-18/index_SORT_BY_BLOCK.html
+/htmlReport/ns-a/index_SORT_BY_BLOCK.html
+/htmlReport/ns-b/index_SORT_BY_BLOCK.html
+/htmlReport/ns-c/index_SORT_BY_BLOCK.html
+/htmlReport/ns-d/index_SORT_BY_BLOCK.html
+/htmlReport/ns-e/index_SORT_BY_BLOCK.html
+/htmlReport/ns-f/index_SORT_BY_BLOCK.html
+/htmlReport/index_SORT_BY_BLOCK.html
+/htmlReport/ns-1/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-2/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-3/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-4/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-5/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-6/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-7/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-8/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-9/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-10/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-11/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-12/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-13/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-14/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-15/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-16/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-17/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-18/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-a/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-b/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-c/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-d/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-e/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-f/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-1/index_SORT_BY_CLASS.html
+/htmlReport/ns-2/index_SORT_BY_CLASS.html
+/htmlReport/ns-3/index_SORT_BY_CLASS.html
+/htmlReport/ns-4/index_SORT_BY_CLASS.html
+/htmlReport/ns-5/index_SORT_BY_CLASS.html
+/htmlReport/ns-6/index_SORT_BY_CLASS.html
+/htmlReport/ns-7/index_SORT_BY_CLASS.html
+/htmlReport/ns-8/index_SORT_BY_CLASS.html
+/htmlReport/ns-9/index_SORT_BY_CLASS.html
+/htmlReport/ns-10/index_SORT_BY_CLASS.html
+/htmlReport/ns-11/index_SORT_BY_CLASS.html
+/htmlReport/ns-12/index_SORT_BY_CLASS.html
+/htmlReport/ns-13/index_SORT_BY_CLASS.html
+/htmlReport/ns-14/index_SORT_BY_CLASS.html
+/htmlReport/ns-15/index_SORT_BY_CLASS.html
+/htmlReport/ns-16/index_SORT_BY_CLASS.html
+/htmlReport/ns-17/index_SORT_BY_CLASS.html
+/htmlReport/ns-18/index_SORT_BY_CLASS.html
+/htmlReport/ns-a/index_SORT_BY_CLASS.html
+/htmlReport/ns-b/index_SORT_BY_CLASS.html
+/htmlReport/ns-c/index_SORT_BY_CLASS.html
+/htmlReport/ns-d/index_SORT_BY_CLASS.html
+/htmlReport/ns-e/index_SORT_BY_CLASS.html
+/htmlReport/ns-f/index_SORT_BY_CLASS.html
+/htmlReport/index_SORT_BY_CLASS.html
+/htmlReport/ns-1/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-2/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-3/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-4/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-5/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-6/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-7/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-8/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-9/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-10/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-11/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-12/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-13/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-14/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-15/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-16/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-17/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-18/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-a/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-b/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-c/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-d/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-e/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-f/index_SORT_BY_CLASS_DESC.html
+/htmlReport/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-1/index_SORT_BY_LINE.html
+/htmlReport/ns-2/index_SORT_BY_LINE.html
+/htmlReport/ns-3/index_SORT_BY_LINE.html
+/htmlReport/ns-4/index_SORT_BY_LINE.html
+/htmlReport/ns-5/index_SORT_BY_LINE.html
+/htmlReport/ns-6/index_SORT_BY_LINE.html
+/htmlReport/ns-7/index_SORT_BY_LINE.html
+/htmlReport/ns-8/index_SORT_BY_LINE.html
+/htmlReport/ns-9/index_SORT_BY_LINE.html
+/htmlReport/ns-10/index_SORT_BY_LINE.html
+/htmlReport/ns-11/index_SORT_BY_LINE.html
+/htmlReport/ns-12/index_SORT_BY_LINE.html
+/htmlReport/ns-13/index_SORT_BY_LINE.html
+/htmlReport/ns-14/index_SORT_BY_LINE.html
+/htmlReport/ns-15/index_SORT_BY_LINE.html
+/htmlReport/ns-16/index_SORT_BY_LINE.html
+/htmlReport/ns-17/index_SORT_BY_LINE.html
+/htmlReport/ns-18/index_SORT_BY_LINE.html
+/htmlReport/ns-a/index_SORT_BY_LINE.html
+/htmlReport/ns-b/index_SORT_BY_LINE.html
+/htmlReport/ns-c/index_SORT_BY_LINE.html
+/htmlReport/ns-d/index_SORT_BY_LINE.html
+/htmlReport/ns-e/index_SORT_BY_LINE.html
+/htmlReport/ns-f/index_SORT_BY_LINE.html
+/htmlReport/index_SORT_BY_LINE.html
+/htmlReport/ns-1/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-2/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-3/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-4/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-5/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-6/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-7/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-8/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-9/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-10/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-11/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-12/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-13/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-14/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-15/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-16/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-17/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-18/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-a/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-b/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-c/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-d/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-e/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-f/index_SORT_BY_LINE_DESC.html
+/htmlReport/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-1/index_SORT_BY_METHOD.html
+/htmlReport/ns-2/index_SORT_BY_METHOD.html
+/htmlReport/ns-3/index_SORT_BY_METHOD.html
+/htmlReport/ns-4/index_SORT_BY_METHOD.html
+/htmlReport/ns-5/index_SORT_BY_METHOD.html
+/htmlReport/ns-6/index_SORT_BY_METHOD.html
+/htmlReport/ns-7/index_SORT_BY_METHOD.html
+/htmlReport/ns-8/index_SORT_BY_METHOD.html
+/htmlReport/ns-9/index_SORT_BY_METHOD.html
+/htmlReport/ns-10/index_SORT_BY_METHOD.html
+/htmlReport/ns-11/index_SORT_BY_METHOD.html
+/htmlReport/ns-12/index_SORT_BY_METHOD.html
+/htmlReport/ns-13/index_SORT_BY_METHOD.html
+/htmlReport/ns-14/index_SORT_BY_METHOD.html
+/htmlReport/ns-15/index_SORT_BY_METHOD.html
+/htmlReport/ns-16/index_SORT_BY_METHOD.html
+/htmlReport/ns-17/index_SORT_BY_METHOD.html
+/htmlReport/ns-18/index_SORT_BY_METHOD.html
+/htmlReport/ns-a/index_SORT_BY_METHOD.html
+/htmlReport/ns-b/index_SORT_BY_METHOD.html
+/htmlReport/ns-c/index_SORT_BY_METHOD.html
+/htmlReport/ns-d/index_SORT_BY_METHOD.html
+/htmlReport/ns-e/index_SORT_BY_METHOD.html
+/htmlReport/ns-f/index_SORT_BY_METHOD.html
+/htmlReport/index_SORT_BY_METHOD.html
+/htmlReport/ns-1/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-2/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-3/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-4/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-5/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-6/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-7/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-8/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-9/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-10/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-11/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-12/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-13/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-14/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-15/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-16/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-17/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-18/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-a/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-b/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-c/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-d/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-e/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-f/index_SORT_BY_METHOD_DESC.html
+/htmlReport/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-1/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-2/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-3/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-4/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-5/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-6/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-7/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-8/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-9/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-10/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-11/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-12/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-13/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-14/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-15/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-16/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-17/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-18/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-a/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-b/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-c/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-d/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-e/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-f/index_SORT_BY_NAME_DESC.html
+/htmlReport/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-1/sources/source-1.html
+/htmlReport/ns-2/sources/source-1.html
+/htmlReport/ns-3/sources/source-1.html
+/htmlReport/ns-4/sources/source-1.html
+/htmlReport/ns-5/sources/source-1.html
+/htmlReport/ns-6/sources/source-1.html
+/htmlReport/ns-7/sources/source-1.html
+/htmlReport/ns-8/sources/source-1.html
+/htmlReport/ns-9/sources/source-1.html
+/htmlReport/ns-10/sources/source-1.html
+/htmlReport/ns-11/sources/source-1.html
+/htmlReport/ns-12/sources/source-1.html
+/htmlReport/ns-13/sources/source-1.html
+/htmlReport/ns-14/sources/source-1.html
+/htmlReport/ns-15/sources/source-1.html
+/htmlReport/ns-16/sources/source-1.html
+/htmlReport/ns-17/sources/source-1.html
+/htmlReport/ns-18/sources/source-1.html
+/htmlReport/ns-a/sources/source-1.html
+/htmlReport/ns-b/sources/source-1.html
+/htmlReport/ns-c/sources/source-1.html
+/htmlReport/ns-d/sources/source-1.html
+/htmlReport/ns-e/sources/source-1.html
+/htmlReport/ns-f/sources/source-1.html
+/htmlReport/ns-1/sources/source-2.html
+/htmlReport/ns-2/sources/source-2.html
+/htmlReport/ns-4/sources/source-2.html
+/htmlReport/ns-5/sources/source-2.html
+/htmlReport/ns-6/sources/source-2.html
+/htmlReport/ns-7/sources/source-2.html
+/htmlReport/ns-8/sources/source-2.html
+/htmlReport/ns-9/sources/source-2.html
+/htmlReport/ns-10/sources/source-2.html
+/htmlReport/ns-11/sources/source-2.html
+/htmlReport/ns-12/sources/source-2.html
+/htmlReport/ns-13/sources/source-2.html
+/htmlReport/ns-14/sources/source-2.html
+/htmlReport/ns-16/sources/source-2.html
+/htmlReport/ns-17/sources/source-2.html
+/htmlReport/ns-18/sources/source-2.html
+/htmlReport/ns-a/sources/source-2.html
+/htmlReport/ns-c/sources/source-2.html
+/htmlReport/ns-d/sources/source-2.html
+/htmlReport/ns-e/sources/source-2.html
+/htmlReport/ns-1/sources/source-3.html
+/htmlReport/ns-2/sources/source-3.html
+/htmlReport/ns-5/sources/source-3.html
+/htmlReport/ns-6/sources/source-3.html
+/htmlReport/ns-7/sources/source-3.html
+/htmlReport/ns-8/sources/source-3.html
+/htmlReport/ns-9/sources/source-3.html
+/htmlReport/ns-10/sources/source-3.html
+/htmlReport/ns-11/sources/source-3.html
+/htmlReport/ns-13/sources/source-3.html
+/htmlReport/ns-16/sources/source-3.html
+/htmlReport/ns-17/sources/source-3.html
+/htmlReport/ns-18/sources/source-3.html
+/htmlReport/ns-a/sources/source-3.html
+/htmlReport/ns-c/sources/source-3.html
+/htmlReport/ns-d/sources/source-3.html
+/htmlReport/ns-e/sources/source-3.html
+/htmlReport/ns-2/sources/source-4.html
+/htmlReport/ns-5/sources/source-4.html
+/htmlReport/ns-7/sources/source-4.html
+/htmlReport/ns-10/sources/source-4.html
+/htmlReport/ns-11/sources/source-4.html
+/htmlReport/ns-13/sources/source-4.html
+/htmlReport/ns-17/sources/source-4.html
+/htmlReport/ns-18/sources/source-4.html
+/htmlReport/ns-e/sources/source-4.html
+/htmlReport/ns-5/sources/source-5.html
+/htmlReport/ns-7/sources/source-5.html
+/htmlReport/ns-10/sources/source-5.html
+/htmlReport/ns-11/sources/source-5.html
+/htmlReport/ns-13/sources/source-5.html
+/htmlReport/ns-17/sources/source-5.html
+/htmlReport/ns-18/sources/source-5.html
+/htmlReport/ns-e/sources/source-5.html
+/htmlReport/ns-5/sources/source-6.html
+/htmlReport/ns-7/sources/source-6.html
+/htmlReport/ns-10/sources/source-6.html
+/htmlReport/ns-11/sources/source-6.html
+/htmlReport/ns-13/sources/source-6.html
+/htmlReport/ns-17/sources/source-6.html
+/htmlReport/ns-18/sources/source-6.html
+/htmlReport/ns-e/sources/source-6.html
+/htmlReport/ns-5/sources/source-7.html
+/htmlReport/ns-11/sources/source-7.html
+/htmlReport/ns-13/sources/source-7.html
+/htmlReport/ns-17/sources/source-7.html
+/htmlReport/ns-18/sources/source-7.html
+/htmlReport/ns-e/sources/source-7.html
+/htmlReport/ns-5/sources/source-8.html
+/htmlReport/ns-11/sources/source-8.html
+/htmlReport/ns-13/sources/source-8.html
+/htmlReport/ns-17/sources/source-8.html
+/htmlReport/ns-18/sources/source-8.html
+/htmlReport/ns-e/sources/source-8.html
+/htmlReport/ns-11/sources/source-9.html
+/htmlReport/ns-13/sources/source-9.html
+/htmlReport/ns-17/sources/source-9.html
+/htmlReport/ns-18/sources/source-9.html
+/htmlReport/ns-e/sources/source-9.html
+/htmlReport/ns-11/sources/source-a.html
+/htmlReport/ns-17/sources/source-a.html
+/htmlReport/ns-18/sources/source-a.html
+/htmlReport/ns-e/sources/source-a.html
+/htmlReport/ns-11/sources/source-b.html
+/htmlReport/ns-17/sources/source-b.html
+/htmlReport/ns-18/sources/source-b.html
+/htmlReport/ns-e/sources/source-b.html
+/htmlReport/ns-11/sources/source-c.html
+/htmlReport/ns-18/sources/source-c.html
+/htmlReport/ns-e/sources/source-c.html
+/htmlReport/ns-e/sources/source-d.html
